@startuml

abstract class Person{
    - person:Persion
    + abstract void approve()
}
class ZR{
    + void approve()
}

class MG{
    + void approve()
}

class TMG{
    + void approve()
}

Person <|--ZR
Person <|--MG
Person <|--TMG

class Client
Person <.. Client

@enduml

/'
Sunny软件公司的OA系统需要提供一个假条审批模块:
如果员工请假天数小于3天，主任 可以审批该假条;如
果员工请假天数大于等于3天，小于10天，经理可以审批
;如果员工 请假天数大于等于10天，小于30天，总经理
可以审批;如果超过30天，总经理也不能审 批，提示
相应的拒绝信息。试用职责链模式设计该假条审批模块'/